--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -32,9 +32,11 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
+* Albanian: {{t-needed|sq}}
 * Armenian: {{t+|hy|թաղիք}}
 * Asturian: {{t|ast|fieltru|m}}
 * Bashkir: {{t|ba|кейеҙ}}
+* Basque: {{t-needed|eu}}
 * Bulgarian: {{t|bg|филц|m|tr=filts|sc=Cyrl}}
 * Catalan: {{t+|ca|feltre|m}}
 * Chinese:
@@ -46,19 +48,27 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Finnish: {{t+|fi|huopa}}
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
 * Galician: {{t|gl|feltro|m}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|Filz|n}}
 * Greek: {{t+|el|κετσές|m}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
+* Hindi: {{t-needed|hi}}
 * Hungarian: {{t+|hu|nemez}}, {{t+|hu|filc}}
-{{trans-mid}}
 * Ido: {{t+|io|felto}}
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t|ja|フェルト|tr=feruto|sc=Jpan}}, {{t|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}, {{t+|ja|毛氈|tr=もうせん, mōsen|sc=Jpan}}
+{{trans-mid}}
+* Kazakh: {{t-needed|kk}}
+* Khmer: {{t-needed|km}}
+* Korean: {{t-needed|ko}}
+* Kyrgyz: {{t-needed|ky}}
 * Luxembourgish: {{t|lb|Filz|m}}
 * Mongolian: {{t+|mn|эсгий|sc=Cyrl}}
+* Nepali: {{t-needed|ne}}
 * Norwegian: {{t+|no|filt|m}}
 * Persian: {{t+|fa|نمد|tr=namad|sc=fa-Arab}}
 * Portuguese: {{t+|pt|feltro|m}}
+* Romanian: {{t-needed|ro}}
 * Russian: {{t+|ru|фетр|m}}, {{t+|ru|во́йлок|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|пуст|m}}, {{t|sh|филц|m}}
@@ -67,7 +77,11 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Spanish: {{t+|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
 * Tagalog: {{t|tl|pyeltro}}, {{t|tl|piyeltro}}
+* Thai: {{t-needed|th}}
+* Tibetan: {{t|bo|ཕྱིང་པ}}
 * Turkish: {{t+|tr|aba}}, {{t+|tr|keçe}}, {{t+|tr|kiyiz}} {{qualifier|dialect}}
+* Tuvan: {{t-needed|tyv}}
+* Welsh: {{t-needed|cy}}
 {{trans-bottom}}
 
 {{trans-top|hat made of felt}}
