--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -4,7 +4,7 @@
 [[Image:Iran saffron threads.jpg|thumb|'''saffron''' (spice): the dried threads from the stigma of ''Crocus sativus'']]
 
 ===Etymology===
-From {{inh|en|en|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safranum}}, from {{der|en|ar|زَعْفَرَان}}, from {{der|en|fa|tr=*zar-parân|*زرپران|lit=with golden leaves}}.
+From {{inh|en|enm|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safranum}}, from {{der|en|ar|زَعْفَرَان}}, from {{der|en|fa|tr=*zar-parân|*زرپران|lit=with golden leaves}}.
 
 ===Pronunciation===
 * {{IPA|lang=enm|/ˈsæfrən/}}
