--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -467,7 +467,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 =====Translations=====
 {{trans-top|to make a bridge}}
 * Czech: {{t|cs|přemostit}}
-* Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}
+* Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}, {{t|fi|silloittaa}}
 * German: {{t+|de|überbrücken}}
 * Ido: {{t|io|pontifar}}
 {{trans-mid}}
