--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -198,7 +198,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Hungarian: {{t+|hu|kígyászkeselyű}}
 {{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
-* Italian: {{t+|it|segretario|m}}
+* Italian: {{t+|it|segretario|m}}, {{t+|it|serpentario|m}}
 * Manx: {{t|gv|screeudeyr|m}}
 * Romanian: {{t|ro|pasăre secretar|f}}
 * Russian: {{t+|ru|пти́ца-секрета́рь|f}}
