--- a/en/旴/旴.16924.wikitext
+++ b/en/旴/旴.16924.wikitext
@@ -11,12 +11,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[heoi1]]|y=heui1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日03}}
+===Pronunciation===
+{{zh-pron
+|m=xū
+|c=heoi1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -28,31 +41,22 @@
 # {{defn|lang=ja|sort=日03}}
 
 ====Readings====
-* {{ja-readings|on=[[く]] (ku)|kun=[[あさ]] (asa)}}
+{{ja-readings|on=[[く]] (ku)|kun=[[あさ]] (asa)}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=우|eumhun=|rv=u|mr=u|y=wu}}
+{{ko-hanja|hangeul=우|eumhun=}}
 
 # {{defn|lang=ko|sort=日03}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xū]] ([[xu1]])|wg=hsü<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日03}}
 
 ----
 
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日03|hanviet=hù}}
+{{vi-hantu|rs=日03|hù}}
 
 # {{defn|lang=vi|sort=日03}}
