--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -9,8 +9,8 @@
 A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grātiā||[[for the sake of]] an [[example]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', {{ISBN|9780553590128}}.</ref>
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
-* {{a|US}} {{IPA|/ˌiˈdʒi/|/fɔɹ ɪɡˈzæmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
+* {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (See [[#Usage notes|Usage notes]], below)
+* {{a|US}} {{IPA|/ˌiˈdʒi/|/fɔɹ ɪɡˈzæmpəl/|lang=en}} (See [[#Usage notes|Usage notes]], below)
 
 ===Adverb===
 {{en-adv|?}}
