--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -99,7 +99,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 #* '''1956''', {{w|James Baldwin}}, ''{{w|Giovanni’s Room}}'', Penguin, 2001, Part Two, Chapter 2,
 #*: He seemed—somehow—younger than I had ever been, and '''blonder''' and more beautiful, and he wore his masculinity as unequivocally as he wore his skin.
 #* {{quote-magazine|year=2012|month=Jan|title=The Best Blonde Hair Color in Hollywood|magazine=Cosmopolitan|url=http://www.cosmopolitan.com/hairstyles-beauty/hair-care/best-blonde-hair-color#slide-1|passage='''Blonde''' bombshells have been around since the beginning of time, but lately, stars have really been stepping up their golden-haired game.}}
-# {{lb|en|of a|female}} {{alternative spelling of|blonde|lang=en}} {{gloss|stupid}}
+# {{alternative spelling of|blonde|lang=en||stupid}}
 #* '''2010''', Mariah Stewart, ''Moon Dance'', Simon and Schuster {{ISBN|9781451633054}}
 #*: “She was so '''blond''', that where it said &#39;sign here,&#39; she wrote Gemini.” He had given her only the weakest of smiles.
 #* '''2002''', Michael Jay, ''The Altherian Code'', iUniverse {{ISBN|9780595214914}}, page 118
