--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -129,7 +129,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * German: {{t+|de|finden}}
 *: Alemannic German: {{t|gsw|aaträffe}}
 * Greek: {{t+|el|βρίσκω}}
-*: Ancient: {{t|grc|εὑρίσκω}}
+*: Ancient Greek: {{t|grc|εὑρίσκω}}
 * Hebrew: {{t+|he|מָצָא|tr=matzá}}
 * Hindi: {{t+|hi|पाना|sc=Deva}}
 * Hungarian: {{t+|hu|talál}}
