--- a/en/坥/坥.13032.wikitext
+++ b/en/坥/坥.13032.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=ceoi1|y=cheui1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土05}}
+===Pronunciation===
+{{zh-pron
+|m=qū
+|c=ceoi1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -29,13 +42,6 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[しょ]] (sho)|kun=[[つつみ]] (tsutsumi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qū]] ([[qu1]])|wg=ch'ü<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
+{{ja-readings
+|on=しょ
+|kun=つつみ}}
