--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -380,11 +380,16 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 #: {{rfquotek|Hooker}}
 # {{lb|en|obsolete|transitive}} To [[resent]]; to remember with anger; to [[dislike]].
 #* '''1607''', [[w: William Shakespeare|William Shakespeare]], ''[[s: The Tragedy of Antony and Cleopatra|The Tragedy of Antony and Cleopatra]]'', III. iv. 12:
-#*: O, my good lord, / Believe not all; or, if you must believe, / Stomach not all.
+#*: O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.
 #* L'Estrange
 #*: The lion began to show his teeth, and to '''stomach''' the affront.
 #* Milton
 #*: The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.
+
+====Synonyms====
+* {{sense|to tolerate}} {{l|en|brook}}, {{l|en|put up with}}; See also [[Thesaurus:tolerate]]
+* {{sense|to be angry}}
+* {{sense|to resent}} See also [[Thesaurus:dislike]]
 
 ====Derived terms====
 * {{l|en|stomachable}}
