--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -46,7 +46,7 @@
 # to [[entrap]]
 <!-- # {{rfdef|zh}} (adjective) -->
 
-====Compounds====
+===Compounds===
 {{zh-der|坑道|坑害|坑井|坑坑坎坎|坑蒙|坑蒙拐騙|坑木|坑騙|坑人|坑洼|坑子|屎坑|陷坑|饢坑|入坑|挖坑|開坑|填坑|退坑|棄坑|栗木坑}}
 
 {{zh-cat|Intermediate}}
