--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -178,6 +178,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 # {{lb|en|slang}} That which is used to dilute or adulterate a recreational drug.
 #: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
 # {{lb|en|fashion}} A notch shaved into an eyebrow.
+# {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
 
 ====Derived terms====
 {{der3|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|{{l|en|final cut}}, {{l|en|make the final cut}}|fine cut|French cut|{{l|en|jump cut}}, {{l|en|jump-cut}}|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut|lang=en}}
