--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -39,7 +39,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Danish: {{t+|da|dvs.}}
 * Dutch: {{t+|nl|d.w.z.}}
 * Esperanto: {{t|eo|t.e.}}
-* Finnish: {{t+|fi|eli}} (not recommended, dated: {{t+|fi|l.}}), {{t+|fi|ts.}}
+* Finnish: {{t+|fi|eli}}, {{t+|fi|ts.}}; {{t+|fi|l.}} {{q|dated}}
 * French: {{t+|fr|c.-à-d.}}, {{t+|fr|c'est-à-dire}}
 * Galician: {{t+|gl|é dicir}}, {{t|gl|ou sexa}}
 * Georgian: {{t|ka|ესე იგი}}, {{t|ka|ე.ი.}}
