--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -58,6 +58,7 @@ From {{der|en|ur|پایجامه|tr=pāyjāma}}/{{der|en|hi|पैजामा}},
 * Hindi: {{t+|hi|पाजामा}}, {{t+|hi|पैजामा}}
 * Hungarian: {{t+|hu|pizsama}}
 * Icelandic: {{t+|is|náttföt}}
+* Ido: {{t+|io|pijamo}}
 * Indonesian: {{t+|id|piyama}}
 * Interlingua: {{t|ia|pajama}}
 * Italian: {{t+|it|pigiama|m}}
