--- a/en/偹/偹.11145.wikitext
+++ b/en/偹/偹.11145.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OLHW|ids=⿰⿰亻丨备}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OLHW|ids=⿲亻丨备}}
 
 # [[prepare]], [[ready]], [[perfect]]
 
