--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -150,6 +150,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * German: {{t+|de|sprechen}}, {{t+|de|reden}}
 *: Alemannic German: {{t|gsw|rede}}
 * Greek: {{t+|el|μιλώ}}, {{t+|el|λέω}}
+*: Ancient: {{t|grc|λαλέω}}
 * Guaraní: {{t+|gn|ñe'ẽ}}
 * Hebrew: {{t+|he|דיבר|tr=dibér|alt=דיבר \ דִּבֵּר}}
 * Hindi: {{t+|hi|बोलना}}
