--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -69,7 +69,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|тј.|sc=Cyrl}} ({{l|sh|то}} {{l|sh|јест}})
 *: Roman: {{t|sh|tj.}} ({{l|sh|tȏ}} {{l|sh|jȅst}})
-* Slovak: {{t|sk|čiže}}
+* Slovak: {{t|sk|čiže}}, {{t|sk|tzn.}}, {{t|sk|teda}}
 * Spanish: {{t+|es|es decir}}, {{t|es|a saber}}, {{t|es|o sea}}
 * Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}}
 * Turkish: {{t+|tr|yani}}
