--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -543,7 +543,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Georgian: {{t|ka|გაჭრა}}, {{t|ka|გაკვეთა}}
 * German: {{t|de|einschneiden}}
 * Greek:
-*: Ancient Greek: {{t|grc|τέμνω}}
+*: Ancient: {{t|grc|τέμνω}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t+|hi|काटना|tr=kāṭnā}}
 * Icelandic: {{t+|is|skera}}
