--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -103,6 +103,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Neapolitan: {{t|nap|reverzà}}, {{t|nap|jettà}}, {{t|nap|vummecà}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * Occitan: {{t+|oc|vomir}}, {{t+|oc|racar}}, {{t|oc|rendre}}
+* Old English: {{t|ang|spīwan}}
 * Old Norse: {{t|non|spýja}}
 * Persian: {{t+|fa|قی کردن|tr=qay kardan}}
 * Polish: {{t+|pl|wymiotować}}, {{t+|pl|rzygać|impf}}
@@ -192,6 +193,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Mongolian: {{t+|mn|бөөлжис}}
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
 * Occitan: {{t|oc|vòmit|m}}
+* Old English: {{t|ang|spiweþa|m}}
 * Polish: {{t+|pl|wymiociny|p}}
 * Portuguese: {{t+|pt|vômito|m}}
 * Romanian: {{t+|ro|vomă|f}}
