--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -26,6 +26,7 @@
 |c=jing2
 |mn=qz,tw,xm,zz:èng/qz,tw,xm,zz:iàⁿ
 |mn_note=èng - literary; iàⁿ - vernacular
+|mn-t=iang3
 |mc=y
 |oc=y
 |ma=Zh-yìng.ogg
