--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -100,7 +100,7 @@ From {{etyl|enm|en}} {{m|enm|crepen}}, from {{etyl|ang|en}} {{m|ang|crēopan||to
 
 {{trans-top|to move in a stealthy or secret manner}}
 * Finnish: {{t+|fi|hiipiä}}, {{t+|fi|hivuttautua}}
-* Maori: {{t|mi|whakameto}}, {{t|mi|whakamomoka}}, {{t|mi|whakamoke}}
+* Maori: {{t|mi|whakameto}}, {{t|mi|whakamomoka}}, {{t|mi|whakamoke}}, {{t|mi|whakatōkihi}}
 {{trans-mid}}
 * Russian: {{t+|ru|кра́сться|impf}}, {{t+|ru|подкра́дываться|impf}}
 {{trans-bottom}}
