--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -4,10 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=26232|canj=OWMV|ids=⿰亻畏}}
 
-# be close to, draw near
-# [[comfort]]
-# [[sit down]]
-
 ====References====
 * {{Han ref|kx=0110.110|dkj=00843|dj=0235.050|hdz=10191.020|uh=504E|ud=20558|bh=B0B9|bd=45241}}
 
@@ -26,16 +22,18 @@
 |mn=oe
 |mc=y
 |oc=y
-|cat=
+|cat=v,a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[snuggle]] up to; to [[lean]] [[close]] to
+# {{†}} [[hidden]]; [[unclear]]
+# {{†}} to [[comfort]]
 
 ====Compounds====
-{{zh-der|偎隨|偎儂|偎妻靠婦|偎乾就濕|依偎|偎倚|偎留|偎紅倚翠|偎香倚玉|偎風躲箭|偎慵墮懶|偎傍|倚玉偎香|倚翠偎紅|輕偎低傍}}
+{{zh-der|偎隨|偎儂|偎妻靠婦|偎乾就濕|依偎|偎依|偎倚|偎留|偎紅倚翠|偎香倚玉|偎風躲箭|偎慵墮懶|偎傍|倚玉偎香|倚翠偎紅|輕偎低傍}}
 
 ----
 
