--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -12,7 +12,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * {{audio|en-us-substance.ogg|Audio (US)|lang=en}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # Physical [[matter]]; [[material]].
 #* '''1699''', {{w|Sir William Temple, 1st Baronet|William Temple}}, ''[http://essays.quotidiana.org/temple/heads_for_conversation/ Heads designed for an essay on conversations]''
