--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -5,8 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=44147|canj=GDHE|ids=⿰土皮}}
 
-# [[slope]], [[bank]], [[hillside]]
-
 ====Derived characters====
 * {{l|mul|[[𠶊]], [[𣔡]], [[𤊫]], [[𤷵]], [[𪸁]]}}
 
@@ -20,6 +18,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|土|皮|ls=psc|c1=s|c2=p|t1=dirt}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -38,16 +37,16 @@
 |x=
 |mc=y
 |oc=y
-|cat=
+|cat=n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[slope]]; [[bank]]; [[hillside]]
 
 ====Compounds====
-{{zh-der|上坡|下坡|下坡走馬|下坡路|下坡運動|十字坡|半坡遺址|博望坡|可倫坡|吉隆坡|坐坡|坡仙|坡地|坡度|坡撇|坡田|坡道|坡陡水急|大陸坡|大陸斜坡|孔坡|山坡|山坡地|愛倫坡|慢坡|打坐坡|斜坡|新加坡|東坡|東坡居士|東坡椅兒|東坡肉|武家坡|江心坡|滑坡|爬坡|白馬坡|背風坡|蘇東坡|護坡|護坡工程|走下坡|起坡|趄坡兒|邊坡|長坂坡|陡坡|馬嵬坡|聶坡|宋坡}}
+{{zh-der|上坡|下坡|下坡走馬|下坡路|下坡運動|十字坡|半坡遺址|博望坡|可倫坡|吉隆坡|坐坡|坡仙|坡地|坡度|坡撇|坡田|坡道|坡陡水急|大陸坡|大陸斜坡|孔坡|山坡|山坡地|愛倫坡|慢坡|打坐坡|斜坡|新加坡|東坡|東坡居士|東坡椅兒|東坡肉|武家坡|江心坡|滑坡|爬坡|白馬坡|背風坡|蘇東坡|護坡|護坡工程|走下坡|起坡|趄坡兒|邊坡|長坂坡|陡坡|馬嵬坡|聶坡|宋坡|樊坡|陳坡|堰坡|簡坡|坡子}}
 
 {{zh-cat|Elementary}}
 
