--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -82,7 +82,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Icelandic: {{t+|is|jakki|m}}, {{t+|is|frakki|m}}
 * Indonesian: {{t+|id|mantel}}
 * Irish: {{t|ga|cóta|m}}, {{t|ga|casóg|f}}
-* Italian: {{t+|it|mantello|m}}, {{t+|it|cappotto|m}}
+* Italian: {{t+|it|mantello|m}}, {{t+|it|cappotto|m}}, {{t+|it|casacca|f}}
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
 * Kazakh: {{t|kk|пальто}}
 * Khmer: {{t|km|អាវធំ}}
