--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -222,7 +222,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 ##: {{ux|en|If you leave now you might '''catch''' him.&emsp; {{nowrap|I would love to have dinner but I have to '''catch''' a plane.}}}}
 ##* '''2011''' ''{{w|Allen Gregory}}'', "Pilot" (season 1, episode 1):
 ##*: Allen Gregory DeLongpre: Did anyone '''catch''' the ''{{w|Charlie Rose (TV series)|Charlie Rose}}'' the evening before last. Did you '''catch''' it? No, nothing?
-## {{lb|en|transitive}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17<sup>th</sup>c.}}
+## {{lb|en|transitive}} To unpleasantly [[discover]] unexpectedly; to unpleasantly [[surprise]] (someone doing something). {{defdate|from 17<sup>th</sup>c.}}
 ##: {{ux|en|He was '''caught''' on video robbing the bank.&emsp; {{nowrap|He was '''caught''' in the act of stealing a biscuit.}}}}
 ## {{lb|en|transitive}} To [[travel]] by means of. {{defdate|from 19<sup>th</sup>c.}}
 ##: {{ux|en|'''catch''' the bus}}
