--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -203,7 +203,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{en-verb|catches|catching|caught}}
 
 # {{lb|en|heading}} ''To capture, overtake.''
-## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
+## {{lb|en|transitive}} To unpleasantly [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
 ##: {{ux|en|I hope I '''catch''' a fish.&emsp; {{nowrap|He ran but we '''caught''' him at the exit.}}&emsp; {{nowrap|The police '''caught''' the robber at a nearby casino.}}}}
 ## {{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14<sup>th</sup>c.}}
 ##* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
