--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -136,7 +136,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Georgian: {{t|ka|წოვა|sc=Geor}}
 * German: {{t+|de|saugen}}
 * Greek: {{t+|el|βυζαίνω}}
-*: Ancient Greek: {{t|grc|μυζάω}}
+*: Ancient: {{t|grc|μυζάω}}
 * Hebrew: {{t+|he|מצץ|tr=matsáts}}
 * Hindi: {{t+|hi|चूसना}}
 * Hungarian: {{t+|hu|szopik}}
@@ -155,7 +155,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Lao: {{t|lo|ດູດ}}
 * Latgalian: {{t|ltg|syukt}}, {{t|ltg|čuļpt}}
 {{trans-mid}}
-* Latin: {{t+|la|sugo}}
+* Latin: {{t+|la|sūgō}}
 * Latvian: {{t+|lv|sūkt}}
 * Lithuanian: {{t|lt|čiul̃pti}}
 * Macedonian: {{t|mk|цица|impf}}
