--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -23,7 +23,7 @@
 ===Etymology 1===
 ; “elder brother”
 : From {{inh|zh|sit-pro|*(g/k)əw-n||elder brother; senior male relative}}; cognate with {{och-l|舅|maternal uncle}} ({{zh-ref|Benedict, 1972}}; STEDT).
-: Alternatively, it may be related to Middle {{cog|mnw||ko²|elder brother}}, with nominal suffix ''-n'' added ({{zh-ref|Schuessler, 2007}}).
+: Alternatively, it may be related to Middle {{cog|mnw|ကော|tr=kao|t=elder brother}}, with nominal suffix ''-n'' added ({{zh-ref|Schuessler, 2007}}).
 ; “descendants; later”
 : Perhaps from {{bor|zh|mkh-pro|*kuun||child}}; cognate with Min {{zh-l|*囝|son; child}} ({{zh-ref|Schuessler, 2007}}).
 ; “many; numerous”
