--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -5,7 +5,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60711|canj=APP|ids=⿱日比}}
 
-====Derived terms====
+====Derived characters====
 * {{l|mul|混}}
 
 ====References====
