--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -150,7 +150,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Kyrgyz: {{t+|ky|табуу|sc=Cyrl}}
 * Lao: {{t|lo|ບອກ}}
 * Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}, {{t|ltg|savaicuot}}
-* Latin: {{t+|la|invenīre}}, {{t|la|nanciscor}}, {{t|la|reperio}}
+* Latin: {{t+|la|invenīre}}, {{t|la|nanciscor}}, {{t|la|reperiō}}
 * Latvian: {{t|lv|atrast}}, {{t|lv|rast}}
 * Lithuanian: {{t|lt|surasti}}
 * Low German: {{t+|nds|finnen}}
