--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -25,7 +25,7 @@
 : From {{inh|zh|sit-pro|*(g/k)əw-n||elder brother; senior male relative}}; cognate with {{och-l|舅|maternal uncle}} ({{zh-ref|Benedict, 1972}}; STEDT).
 : Alternatively, it may be related to Middle {{cog|mnw|ကော|tr=kao|t=elder brother}}, with nominal suffix ''-n'' added ({{zh-ref|Schuessler, 2007}}).
 ; “descendants; later”
-: Perhaps from {{bor|zh|mkh-pro|*kuun||child}}; cognate with Min {{zh-l|*囝|son; child}} ({{zh-ref|Schuessler, 2007}}) and with ancient Chu dialect {{och-l|觀|id=1}} meaning "child, offspring" {{zh-ref|Ye, 2014}}); <br/>cf. also some rear meanings of the characters {{och-l|丱|young child}}, {{och-l|鯤|roe, fish egg}} and {{och-l|鰥|id=1|roe}} ([[ibid.]]). In modern Wu dialects the character {{och-l|官}} is used to mean "children" ([[ibid.]]).
+: Perhaps from {{bor|zh|mkh-pro|*kuun||child}}; cognate with Min {{zh-l|*囝|son; child}} ({{zh-ref|Schuessler, 2007}}) and with ancient Chu dialect {{och-l|觀|id=1|child; offspring}} ({{zh-ref|Ye, 2014}}); cf. also some rear meanings of the characters {{och-l|丱|young child}}, {{och-l|鯤|roe; fish egg}} and {{och-l|鰥|id=1|roe}} ([[ibid.]]). In modern Wu dialects the character {{och-l|官}} is used to mean "children" ([[ibid.]]).
 ; “many; numerous”
 : From {{inh|zh|sit-pro|*m-kul||twenty; all}}; cognate with {{och-l|群|herd; all}} ({{zh-ref|Schuessler, 2007}}; STEDT).
 
