--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -35,6 +35,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 
 ====Translations====
 {{trans-top|instance of drawing something into one's mouth by inhaling}}
+* Italian: {{t+|it|succhiata|f}}
 * Persian: {{t+|fa|مک|tr=mak|sc=fa-Arab}}, {{t+|fa|میک|tr=mik|sc=fa-Arab}} {{qualifier|colloquial}}
 {{trans-mid}}
 {{trans-bottom}}
