--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -35,7 +35,7 @@ Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Fran
 #: [[w:Anatole France|Anatole France]], a French poet, journalist, and novelist
 
 ====Related terms====
-{{rel3|Franco-|Francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
+{{rel3|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
 
 ====Translations====
 {{trans-top|id=Q142|country}}
@@ -237,7 +237,6 @@ Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Fran
 * {{fr-IPA}}
 * {{audio|Fr-France.ogg|audio (France)|lang=fr}}
 * {{audio|Fr-France-fr-CA-Québec-(Lac-Saint-Jean).oga|audio (Quebec)|lang=fr}}
-* {{hyphenation|Fran|ce|lang=fr}}
 
 ===Etymology===
 From {{inh|fr|frm|France}}, from {{inh|fr|fro|France}}, from {{inh|fr|ML.|-}} or {{inh|fr|LL.|Francia}}, from {{m|la|Francī}}, the name of a {{der|fr|gem}} tribe.
