--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -76,6 +76,9 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 ====Derived terms====
 {{der4|lang=fr|champ libre|libre arbitre|libre-échange|libre-examen|libre-service|licence libre|logiciel libre|papier libre}}
 
+====Descendants====
+* {{desc|bo=1|gsw|liiber}}
+
 ===Further reading===
 * {{R:TLFi}}
 
