--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -78,6 +78,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 
 ====Descendants====
 * {{desc|bor=1|gsw|liiber}}
+* {{desc|bor=1|en|libre}}
 
 ===Further reading===
 * {{R:TLFi}}
