--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -217,8 +217,9 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 * {{l|es|libertad}}
 
 =====Descendants=====
-* {{desc|hil|libre}}
-* {{desc|tl|libre}}
+* {{desc|bor=1|en|libre}}
+* {{desc|bor=1|hil|libre}}
+* {{desc|bor=1|tl|libre}}
 
 ===Etymology 2===
 {{nonlemma}}
