--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -79,6 +79,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 ====Descendants====
 * {{desc|bor=1|gsw|liiber}}
 * {{desc|bor=1|en|libre}}
+* {{desc|bor=1|ro|liber}}
 
 ===Further reading===
 * {{R:TLFi}}
