--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -14,7 +14,7 @@ From {{inh|fr|fro|jeudi}}, {{m|fro|jusdi}}, from {{inh|fr|la||Jovis diēs}} or {
 {{fr-noun|m}}
 
 # [[Thursday]] (day of the week).
-#*{{quote-book|1986||Il était une fois … une petite grenouille|||{{ux|fr|En avant, la musique des jours de la semaine.<br>En avant, la musique des jours de la semaine.<br>Lundi marche devant,<br>Rantaplan.<br>Mardi joue de la trompette,<br>De la trompette.<br>Mercredi du violon,<br>Du violon.<br>'''Jeudi''' de l'accordéon,<br>De l'accordéon.<br>Vendredi et samedi chantent la chanson de dimanche.<br>Vendredi et samedi chantent la chanson de dimanche.<br>En avant, la musique des jours de la semaine.<br>En avant, la musique des jours de la semaine.|Onward, the music of the days of the week.<br>Onward, the music of the days of the week.<br>Monday march ahead,<br>Rantaplan.<br>Tuesday plays the trumpet,<br>The trumpet.<br>Wednesday the violin,<br>The violin.<br>Thursday the accordion,<br>The accordion.<br>Friday and Saturday sing the song of Sunday.<br>Friday and Saturday sing the song of Sunday.<br>Onward, the music of the days of the week.<br>Onward, the music of the days of the week.}}|chapter=Il était une fois … une maison des musiciens|trans-chapter=There Once Was… a House of Musicians|trans-title=There Once Was… a Little Frog|genre=fiction|language=French|publisher={{w2|fr|CLE International}}|location=Paris}}
+#*{{quote-book|1986||Il était une fois … une petite grenouille|||{{ux|fr|En avant, la musique des jours de la semaine.<br>En avant, la musique des jours de la semaine.<br>Lundi marche devant,<br>Rantaplan.<br>Mardi joue de la trompette,<br>De la trompette.<br>Mercredi du violon,<br>Du violon.<br>'''Jeudi''' de l’accordéon,<br>De l’accordéon.<br>Vendredi et samedi chantent la chanson de dimanche.<br>Vendredi et samedi chantent la chanson de dimanche.<br>En avant, la musique des jours de la semaine.<br>En avant, la musique des jours de la semaine.|Onward, the music of the days of the week.<br>Onward, the music of the days of the week.<br>Monday march ahead,<br>Rantaplan.<br>Tuesday plays the trumpet,<br>The trumpet.<br>Wednesday the violin,<br>The violin.<br>Thursday the accordion,<br>The accordion.<br>Friday and Saturday sing the song of Sunday.<br>Friday and Saturday sing the song of Sunday.<br>Onward, the music of the days of the week.<br>Onward, the music of the days of the week.}}|chapter=Il était une fois … une maison des musiciens|trans-chapter=There Once Was… a House of Musicians|trans-title=There Once Was… a Little Frog|genre=fiction|language=French|publisher={{w2|fr|CLE International}}|location=Paris}}
 
 ====Derived terms====
 * {{l|fr|la semaine des quatre jeudis}}
