--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -65,6 +65,7 @@ From {{etyl|enm|en}} {{m|enm|crepen}}, from {{etyl|ang|en}} {{m|ang|crēopan||to
 * German: {{t+|de|kriechen}}
 * Hungarian: {{t+|hu|kúszik}}
 {{trans-mid}}
+* Italian: {{t+|it|abbarbicarsi}}
 * Japanese: {{t|ja|這う|tr=hau|sc=Jpan}}, {{t|ja|伝う|tr=tsutau|sc=Jpan}}
 * Maori: {{t|mi|toropā}} {{qualifier|refers to plants}}
 * Portuguese: {{t+|pt|trepar}}
