--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -546,7 +546,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 *: Ancient: {{t|grc|τέμνω}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t+|hi|काटना|tr=kāṭnā}}
-* Hungarian: {{t+|hu|vág}}
+* Hungarian: {{t+|hu|vág}}, {{t+|hu|megvág}}
 * Icelandic: {{t+|is|skera}}
 * Indonesian: {{t+|id|potong}}
 * Irish: {{t|ga|gearr}}
