--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -772,6 +772,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Greek: {{t|el|[[κάνω]] [[κοπάνα]]|f}}
 {{trans-mid}}
 * Hebrew: {{t+|he|הבריז|tr=hivríz}}
+* Hungarian: {{t+|hu|lóg}}
 * Icelandic: {{t|is|skrópa}}
 * Italian: {{t+|it|saltare}}
 * Japanese: {{t+|ja|サボる|tr=saboru}}
