--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -230,7 +230,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Dutch: {{t|nl|zoals het hoort}}
 * Finnish: {{t+|fi|suora}}, {{t+|fi|rehellinen}}, {{t+|fi|vilpitön}}
 * French: {{t+|fr|comme il faut}}
-* German: {{t+|de|aufrecht}}, {{t+|de|aufrichtig}}, {{t+|de|geradeaus}}
+* German: {{t+|de|aufrecht}}, {{t+|de|aufrichtig}}, {{t+|de|offen}}, {{t+|de|ungeschminkt}}, {{t+|de|direkt}}
 * Hebrew: {{t|he|יָשִׁיר|m|tr=yashír}}
 * Hungarian: {{t+|hu|egyenes}}, {{t+|hu|őszinte}}
 * Irish: {{t|ga|díreach}}
