--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -44,7 +44,7 @@
 # {{surname|lang=zh}}
 
 ===Compounds===
-{{zh-der|南昌|寖明寖昌|太昌|國運昌隆|不昌|光昌|五世其昌|昌平|昌化石|昌盛|東昌紙|昌言|武昌剩竹|文昌魚|昌容|樂昌破鏡|昌盍|泰昌|昌大|昌辭|昌意|武昌起義|昌黎|昌明|昌隆|昌光|文昌星|蕃昌|繁榮昌盛|隆昌|阿昌族|平昌|永昌|金昌|武昌|晉昌|宜昌}}
+{{zh-der|南昌|寖明寖昌|太昌|國運昌隆|不昌|光昌|五世其昌|昌平|昌化石|昌盛|東昌紙|昌言|武昌剩竹|文昌魚|昌容|樂昌破鏡|昌盍|泰昌|昌大|昌辭|昌意|武昌起義|昌黎|昌明|昌隆|昌光|文昌星|蕃昌|繁榮昌盛|隆昌|阿昌族|平昌|永昌|金昌|武昌|晉昌|宜昌|孝昌}}
 
 ----
 
