--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -161,8 +161,8 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Latvian: {{t|lv|spēlēt}}
 * Ligurian: {{t|lij|zugâ}}
 * Lingala: {{t|ln|kosakana}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|žaisti}}
+{{trans-mid}}
 * Low German:
 *: German Low German: {{t|nds-de|spelen}}
 * Macedonian: {{t|mk|игра|impf}}
@@ -217,6 +217,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Venetian: {{t+|vec|xugar}}, {{t|vec|zugar}}, {{t|vec|xogar}}, {{t+|vec|zogar}}
 * Vietnamese: {{t+|vi|chơi}}
 * Welsh: {{t+|cy|chwarae}}
+* Westrobothnian: {{t|gmq-bot|läjjkes}}
 * Yiddish: {{t|yi|שפּילן}}
 * Yucatec Maya: {{t|yua|báaxal}}
 {{trans-bottom}}
