--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -12,6 +12,9 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han compound|ls=psc|心|楞|c1=s|c2=p|abb2=y|no_och2=y}}.
+
 ===Pronunciation 1===
 {{zh-pron
 |m=lèng
