--- a/en/坁/坁.12996.wikitext
+++ b/en/坁/坁.12996.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zi2]]|y=ji2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土04}}
+===Pronunciation===
+{{zh-pron
+|m=zhǐ
+|c=zi2
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -26,13 +39,4 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|on=[[し]] (shi)|kun=[[とまる]] (tomaru), [[さか]] (saka)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhǐ]] ([[zhi3]])|wg=chih<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+{{ja-readings|on=[[し]] (shi)|kun=[[とまる]] (tomaru), [[さか]] (saka)}}
