--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -271,7 +271,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Latvian: {{t|lv|sviests|m}}
 * Limburgish: {{t+|li|bótter|m}}
 * Lithuanian: {{t|lt|sviestas|m}}
-* Lombard: {{t|lmo|butter|m}} {{qualifier|Milan}}, {{t|lmo|bütìr|m}} {{qualifier|Occidental}}
+* Lombard: {{t|lmo|buter|m}} {{qualifier|Western}}, {{t|lmo|boter|m}} {{qualifier|Eastern}}
 * Low German:
 *: Dutch Low Saxon: {{t+|nds-nl|botter|f}}
 *: German Low German: {{t+|nds-de|Botter|f}}
