--- a/en/垝/垝.13089.wikitext
+++ b/en/垝/垝.13089.wikitext
@@ -11,12 +11,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=gwai2|y=gwai2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=guǐ
+|c=gwai2
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -28,13 +41,4 @@
 # {{defn|lang=ja|sort=土06}}
 
 ====Readings====
-* {{ja-readings|on=[[き]] (ki)|kun=[[やぶれる]] (yabureru), [[だい]] (dai)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[guǐ]] ([[gui3]])|wg=kuei<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
+{{ja-readings|on=[[き]] (ki)|kun=[[やぶれる]] (yabureru), [[だい]] (dai)}}
